BM49: creating API documentation of brands list, update and delete brand
